--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>IEEE BUB</title>
     <link rel="icon" href="imgs/bub.png">
     <!-- Main CSS -->
-    <link rel="stylesheet" href="css/temp.css">
+    <link rel="stylesheet" href="css/index.css">
     <!-- Render All Elements Normally -->
     <link rel="stylesheet" href="css/normalize.css">
     <!-- Font Awesome library -->
