--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="content">
                     <div class="text" data-aos="fade-up"  data-aos-duration="1200" data-aos-once="true">
                         <h2>Hi,IEEEian</h2>
-                        <p>Come and see how our journey is going, maybe you'll be a part of it oneday</p>
+                        <p>Come and see how our journey is going, maybe you'll be a part of it one day.</p>
                     </div>
                     <div class="logo" data-aos="fade-down"  data-aos-duration="1200" data-aos-once="true">
                         <img src="imgs/ieee.png" alt="" width="400px">
@@ -68,12 +68,10 @@
         <div class="container">
             <div class="special-heading">
                 <p >Keep up with our news</p>
-                <h2>Announcements</h2>
+                <h2>ANNOUNCEMENTS</h2>
             </div>
             <div class="content">
-                <div class="profile" >
-                    <img src="imgs/profile2.jpg" alt="Me" >
-                </div>
+    
                 <div class="history">
                     <div class="cols">
                         <div class="col">
