--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
                                 <li><a href="#announcements">Announcements</a></li>
                                 <li><a href="#events">Events</a></li>
                                 <li><a href="#Team">Team</a></li>
-                                <li><a href="#contact">Contact</a></li>
                             </ul>
                         </div>
                     </div>
                 </nav>
+                <div class="but">
+                    <a href="#contact"><button class="bt1">Contact</button></a>
+                    <!-- <button class="bt2">Contact</button> -->
+                </div>
             </div>
         </div>
         <!-- End Header -->
@@ -64,38 +67,73 @@
         <!-- End Intro Section -->
     </div>
     <!-- Start About me Section -->
-    <div class="about" id="about">
+    <div class="announce" id="about">
         <div class="container">
             <div class="special-heading">
                 <p >Keep up with our news</p>
                 <h2>ANNOUNCEMENTS</h2>
             </div>
             <div class="content">
-    
-                <div class="history">
-                    <div class="cols">
-                        <div class="col">
-                            <img src="imgs/experience.png" alt="" class="icon">
-                            <h3>Experience</h3>
-                            <p class="time"> +4 Months</p>
-                            <p class="job">Ai Model Trainer</p>
-                        </div>
-                        <div class="col">
-                            <img src="imgs/education.png" alt="" class="icon">
-                            <h3>Education</h3>
-                            <p class="time">B.Cs Bachelors Degree</p>
-                            <p class="job">Benha university</p>
-                        </div>
-                    </div>
-                    <div class="descript">
-                        <p>During my time at Scale AI USA, I served as a Remote Coding AI Model Tester, evaluating AI performance and providing feedback for improvement. Previously, I was a Competitive Coding AI Trainer, achieving perfect accuracy in coding tasks and contributing to the development of advanced generative AI models, notably in the Dolphin Project. My roles underscore my proficiency in coding, problem-solving, and advancing AI technology, But Now I'm starting my career as a Web Developer.</p>
-                    </div>
+                <div class="phone">
+                    <img src="imgs/Cross-platform software.gif" alt="" class="gif">
+                    <img src="imgs/app-icon.png" alt="" class="appicon">
                 </div>
             </div>
         </div>
     </div>
     <!-- End About me Section -->
+    <div class="event-section" id="events">
+        <div class="special-heading">
+            <p >Keep up with our news</p>
+            <h2>Upcoming Events</h2>
+        </div>
+        <div class="wrapper">
+            <div class="slider">
+                <div class="slide active"><img src="/imgs/417496720_122129061398176738_5152360014491081054_n.jpg" alt="" srcset=""></div>
+                <div class="slide"><img src="/imgs/428608975_813470564140346_3119655288788747631_n.jpg" alt="" srcset=""></div>
+                <div class="slide"><img src="/imgs/428699812_817232470430822_3672796228702654987_n.jpg" alt="" srcset=""></div>
+                <div class="slide"><img src="/imgs/430858252_819899103497492_753438531780433772_n.jpg" alt="" srcset=""></div>
+                <div class="slide"><img src="/imgs/430866151_819899663497436_3855873767756725001_n.jpg" alt="" srcset=""></div>
+                <div class="slide"><img src="/imgs/430870673_819898770164192_6054743429955625108_n.jpg" alt="" srcset=""></div>
+                <div class="slide"><img src="/imgs/430896664_818373966983339_8506501736667685736_n.jpg" alt="" srcset=""></div>
+                <div class="slide"><img src="/imgs/431312294_819899350164134_2190193390468296135_n.jpg" alt="" srcset=""></div>
+                <div class="slide prev"><img src="/imgs/430905592_819898523497550_2249855588110603515_n.jpg" alt="" srcset=""></div>
+            </div>
+            <div class="event-details-container">
+                <div class="container">
+                    <div class="title">Spirit 2024</div>
+                    <div class="details">
+                        <div><i class="fa-regular fa-clock icon"></i>Saturday, 9 March 9:00 am</div>
+                        <div><i class="fa-solid fa-location-dot icon"></i>ICB - International College Of Benha</div>
+                    </div>
+                    <div class="countdown">
+                        <div class="box days">
+                            <span class="time">00</span>
+                            <span class="text">Days</span>
+                        </div>
+                        <div class="box hours">
+                            <span class="time">00</span>
+                            <span class="text">Hours</span>
+                        </div>
+                        <div class="box mins">
+                            <span class="time">00</span>
+                            <span class="text">mins</span>
+                        </div>
+                        <div class="box secs">
+                            <span class="time">00</span>
+                            <span class="text">secs</span>
+                        </div>
+                    </div>
+                    <div class="tickets">
+                        <button>Book your seats</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
+        <script src="https://kit.fontawesome.com/d109a23a31.js" crossorigin="anonymous"></script>
+        <script src="main.js"></script>
     <!-- <script src="index.js"></script> -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
