--- a/index.html
+++ b/index.html
@@ -37,16 +37,23 @@
                         <div class="list">
                             <ul>
                                 <li><a href="#announcements">Announcements</a></li>
-                                <li><a href="#events">Events</a></li>
+                                <li class="eve">
+                                    <a href="#events">Events</a>
+                                    <ul>
+                                        <li><a href="#">Spirit</a></li>
+                                        <li><a href="#">Ghostech</a></li>
+                                        <li><a href="#">Mind Game</a></li>
+                                    </ul>
+                                </li>
                                 <li><a href="#Team">Team</a></li>
+                                <div class="but">
+                                    <a href="#contact"><button class="bt1">Contact</button></a>
+                                    <!-- <button class="bt2">Contact</button> -->
+                                </div>
                             </ul>
                         </div>
                     </div>
                 </nav>
-                <div class="but">
-                    <a href="#contact"><button class="bt1">Contact</button></a>
-                    <!-- <button class="bt2">Contact</button> -->
-                </div>
             </div>
         </div>
         <!-- End Header -->
@@ -74,9 +81,16 @@
                 <h2>ANNOUNCEMENTS</h2>
             </div>
             <div class="content">
+                <div class="text">
+                    <h2><span>IEEE</span> App is now live</h2>
+                    <p>Embark on a transformative journey with the IEEE BUB SB mobile application, designed to revolutionize how you navigate the world of technology and engineering. This dynamic app serves as your digital hub, offering a plethora of features to enrich your academic and professional pursuits.</p>
+                    <a href="https://play.google.com/store/apps/details?id=com.ieee.bub.sb.ieee_bub_sb" target="_blank">
+                        <button>Download From Googleplay</button>
+                    </a>
+                </div>
                 <div class="phone">
                     <img src="imgs/Cross-platform software.gif" alt="" class="gif">
-                    <img src="imgs/app-icon.png" alt="" class="appicon">
+                    <img src="imgs/app-icon.png" alt="" class="appicon" data-aos="fade-in"  data-aos-delay="200" data-aos-duration="1200" data-aos-once="true">
                 </div>
             </div>
         </div>
@@ -84,20 +98,20 @@
     <!-- End About me Section -->
     <div class="event-section" id="events">
         <div class="special-heading">
-            <p >Keep up with our news</p>
+            <p >Discover Our Events</p>
             <h2>Upcoming Events</h2>
         </div>
         <div class="wrapper">
             <div class="slider">
-                <div class="slide active"><img src="/imgs/417496720_122129061398176738_5152360014491081054_n.jpg" alt="" srcset=""></div>
-                <div class="slide"><img src="/imgs/428608975_813470564140346_3119655288788747631_n.jpg" alt="" srcset=""></div>
-                <div class="slide"><img src="/imgs/428699812_817232470430822_3672796228702654987_n.jpg" alt="" srcset=""></div>
-                <div class="slide"><img src="/imgs/430858252_819899103497492_753438531780433772_n.jpg" alt="" srcset=""></div>
-                <div class="slide"><img src="/imgs/430866151_819899663497436_3855873767756725001_n.jpg" alt="" srcset=""></div>
-                <div class="slide"><img src="/imgs/430870673_819898770164192_6054743429955625108_n.jpg" alt="" srcset=""></div>
-                <div class="slide"><img src="/imgs/430896664_818373966983339_8506501736667685736_n.jpg" alt="" srcset=""></div>
-                <div class="slide"><img src="/imgs/431312294_819899350164134_2190193390468296135_n.jpg" alt="" srcset=""></div>
-                <div class="slide prev"><img src="/imgs/430905592_819898523497550_2249855588110603515_n.jpg" alt="" srcset=""></div>
+                <div class="slide active"><img src="/417496720_122129061398176738_5152360014491081054_n.jpg" alt="" srcset=""></div>
+                <div class="slide"><img src="/428608975_813470564140346_3119655288788747631_n.jpg" alt="" srcset=""></div>
+                <div class="slide"><img src="/428699812_817232470430822_3672796228702654987_n.jpg" alt="" srcset=""></div>
+                <div class="slide"><img src="/430858252_819899103497492_753438531780433772_n.jpg" alt="" srcset=""></div>
+                <div class="slide"><img src="/430866151_819899663497436_3855873767756725001_n.jpg" alt="" srcset=""></div>
+                <div class="slide"><img src="/430870673_819898770164192_6054743429955625108_n.jpg" alt="" srcset=""></div>
+                <div class="slide"><img src="/430896664_818373966983339_8506501736667685736_n.jpg" alt="" srcset=""></div>
+                <div class="slide"><img src="/431312294_819899350164134_2190193390468296135_n.jpg" alt="" srcset=""></div>
+                <div class="slide prev"><img src="/430905592_819898523497550_2249855588110603515_n.jpg" alt="" srcset=""></div>
             </div>
             <div class="event-details-container">
                 <div class="container">
