--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <!-- End Intro Section -->
         </div>
-        <!-- Start About me Section -->
+        <!-- Start Announce Section -->
         <div class="announce" id="announce">
             <div class="container">
                 <div class="special-heading">
