before header responsive

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                     <li class="eve">
                                         <a href="#events">Events</a>
                                         <ul>
-                                            <li><a href="#">Spirit</a></li>
+                                            <li><a href="#events">Spirit</a></li>
                                             <li><a href="#">Ghostech</a></li>
                                             <li><a href="#">Mind Game</a></li>
                                         </ul>
@@ -57,7 +57,7 @@
                                     <li><a href="#Team">Team</a></li>
                                     <div class="but">
                                         <a href="#contact"><button
-                                                class="bt1">Contact</button></a>
+                                                class="bt1">Contact Us</button></a>
                                         <!-- <button class="bt2">Contact</button> -->
                                     </div>
                                 </ul>
@@ -74,9 +74,9 @@
                         <div
                             class="text"
                             data-aos="fade-up"
-                            data-aos-duration="1200"
+                            data-aos-duration="1000"
                             data-aos-once="true">
-                            <h2>Hi,IEEEian</h2>
+                            <h2>Hi, Friend</h2>
                             <p>
                                 Come and see how our journey is going, maybe
                                 you'll be a part of
@@ -119,7 +119,9 @@
                         <a
                             href="https://play.google.com/store/apps/details?id=com.ieee.bub.sb.ieee_bub_sb"
                             target="_blank">
-                            <button>Download From Googleplay</button>
+                            <div class="but">
+                                <button class="bt1">Download From Googleplay</button>
+                            </div>
                         </a>
                     </div>
                     <div class="phone">
@@ -230,13 +232,8 @@
             </div>
             <div class="wrapper">
                 <div class="slider">
+                    
                     <div class="slide active">
-                        <img
-                            src="/imgs/417496720_122129061398176738_5152360014491081054_n.png"
-                            alt
-                            srcset />
-                    </div>
-                    <div class="slide">
                         <img
                             src="/imgs/428608975_813470564140346_3119655288788747631_n.png"
                             alt
