--- a/index.html
+++ b/index.html
@@ -27,45 +27,46 @@
     </head>
     <body>
         <!-- Start Header -->
+        <div class="overlay"></div>
+        <div class="header">
+            <div class="container">
+                <div class="logo">
+                    <img src="imgs/ieeewhite.png" alt />
+                </div>
+                <nav>
+                    <div class="links">
+                        <span class="icon">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </span>
+                        <div class="list">
+                            <ul>
+                                <li><a
+                                        href="#announce">Announcements</a></li>
+                                <li><a href="#about">About</a></li>
+                                <li class="eve">
+                                    <a href="#events">Events</a>
+                                    <ul>
+                                        <li><a href="#events">Spirit</a></li>
+                                        <li><a href="#">Ghostech</a></li>
+                                        <li><a href="#">Mind Game</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#Team">Team</a></li>
+                                <div class="but">
+                                    <a href="#contact"><button
+                                            class="bt1">Contact Us</button></a>
+                                    <!-- <button class="bt2">Contact</button> -->
+                                </div>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
         <div class="bigheader">
             <div class="layer"></div>
-            <div class="header">
-                <div class="container">
-                    <div class="logo">
-                        <img src="imgs/ieeewhite.png" alt />
-                    </div>
-                    <nav>
-                        <div class="links">
-                            <span class="icon">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </span>
-                            <div class="list">
-                                <ul>
-                                    <li><a
-                                            href="#announce">Announcements</a></li>
-                                    <li><a href="#about">About</a></li>
-                                    <li class="eve">
-                                        <a href="#events">Events</a>
-                                        <ul>
-                                            <li><a href="#events">Spirit</a></li>
-                                            <li><a href="#">Ghostech</a></li>
-                                            <li><a href="#">Mind Game</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#Team">Team</a></li>
-                                    <div class="but">
-                                        <a href="#contact"><button
-                                                class="bt1">Contact Us</button></a>
-                                        <!-- <button class="bt2">Contact</button> -->
-                                    </div>
-                                </ul>
-                            </div>
-                        </div>
-                    </nav>
-                </div>
-            </div>
             <!-- End Header -->
             <!-- Start Intro Section -->
             <div class="intro">
@@ -235,7 +236,7 @@
                     
                     <div class="slide active">
                         <img
-                            src="/imgs/428608975_813470564140346_3119655288788747631_n.png"
+                            src="/imgs/back.jpg"
                             alt
                             srcset />
                     </div>
@@ -324,6 +325,51 @@
             </div>
         </div>
         <!--  End Events Section -->
+        <!--  Start Footer Section -->
+        <div class="footer">
+            <div class="content">
+                <div class="subscirbe">
+                    <div class="text">
+                        <p>Subscribe to our newsletter</p>
+                    </div>
+                    <div class="sec">
+                        <input type="email" placeholder="Your Email">
+                        <button type="submit" class="btn">Subscribe</button>
+                    </div>
+                </div>
+                <div class="logo">
+                    <img src="imgs/ieee.png" alt="">
+                </div>
+                <div class="links">
+                    <span class="icon">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </span>
+                    <div class="list">
+                        <ul>
+                            <li><a href="#announce">Announcements</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li class="eve"><a href="#events">Events</a></li>
+                            <li><a href="#Team">Team</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <span class="line"></span>
+                <div class="social">
+                    <a href class="ico">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a>
+                    <a href class="ico">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href class="ico">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!--  End Footer Section -->
         <script
             src="https://kit.fontawesome.com/d109a23a31.js"
             crossorigin="anonymous"></script>
