--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                             href="https://play.google.com/store/apps/details?id=com.ieee.bub.sb.ieee_bub_sb"
                             target="_blank">
                             <div class="but">
-                                <button class="bt1">Download From Googleplay</button>
+                                <button class="bt1">Download From
+                                    Googleplay</button>
                             </div>
                         </a>
                     </div>
@@ -233,7 +234,7 @@
             </div>
             <div class="wrapper">
                 <div class="slider">
-                    
+
                     <div class="slide active">
                         <img
                             src="/imgs/back.jpg"
@@ -324,48 +325,250 @@
                 </div>
             </div>
         </div>
-        <!--  End Events Section -->
-        <!--  Start Footer Section -->
-        <div class="footer">
-            <div class="content">
-                <div class="subscirbe">
-                    <div class="text">
-                        <p>Subscribe to our newsletter</p>
+        <div class="events">
+            <div class="container">
+                <div class="moataz_container">
+                    <div class="special-heading">
+                        <p>Discover Our Events</p>
+                        <h2>Featured Events</h2>
                     </div>
-                    <div class="sec">
-                        <input type="email" placeholder="Your Email">
-                        <button type="submit" class="btn">Subscribe</button>
+                    <div class="two">
+                        <div class="row">
+                            <div class="event">
+                                <div class="event1_img">
+                                    <a href="evenets"><img
+                                            src="imgs/event11.jpg" alt></a>
+                                    <div class="circle">
+                                        <span>
+                                            <span>4</span>
+                                            Mar
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="mocontent">
+                                    <div class="link_loc">
+                                        <h3><a href="events">Portal Beyond
+                                                Now</a></h3>
+                                        <div>
+                                            <i
+                                                class="fa-solid fa-location-dot"></i>
+                                            <p>Sand diego, Canada</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="event">
+                                <div class="event2_img">
+                                    <a href="evenets"><img src="imgs/lets.jpg"
+                                            alt></a>
+                                    <div class="circle">
+                                        <span>
+                                            <span>14</span>
+                                            Dec
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="mocontent">
+                                    <div class="link_loc">
+                                        <h3><a href="events">Let's
+                                                Embark</a></h3>
+                                        <div>
+                                            <i
+                                                class="fa-solid fa-location-dot"></i>
+                                            <p>Sand diego, Canada</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="event">
+                                <div class="event3_img">
+                                    <a href="evenets"><img src="imgs/event3.jpg"
+                                            alt></a>
+                                    <div class="circle">
+                                        <span>
+                                            <span>9</span>
+                                            Sept
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="mocontent">
+                                    <div class="link_loc">
+                                        <h3><a href="events">Mind Game</a></h3>
+                                        <div>
+                                            <i
+                                                class="fa-solid fa-location-dot"></i>
+                                            <p>Sand diego, Canada</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="event">
+                                <div class="event4_img">
+                                    <a href="evenets"><img src="imgs/career.jpg"
+                                            alt></a>
+                                    <div class="circle">
+                                        <span>
+                                            <span>6</span>
+                                            Apr
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="mocontent">
+                                    <div class="link_loc">
+                                        <h3><a href="events">Reach Your
+                                                Career</a></h3>
+                                        <div>
+                                            <i
+                                                class="fa-solid fa-location-dot"></i>
+                                            <p>Sand diego, Canada</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="event">
+                                <div class="event5_img">
+                                    <a href="evenets"><img src="imgs/event5.jpg"
+                                            alt></a>
+                                    <div class="circle">
+                                        <span>
+                                            <span>3</span>
+                                            Mar
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="mocontent">
+                                    <div class="link_loc">
+                                        <h3><a href="events">Portal
+                                                "out of time"</a></h3>
+                                        <div>
+                                            <i
+                                                class="fa-solid fa-location-dot"></i>
+                                            <p>Sand diego, Canada</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="event">
+                                <div class="event6_img">
+                                    <a href="evenets"><img
+                                            src="imgs/code of duty iii.jpg"
+                                            alt></a>
+                                    <div class="circle">
+                                        <span>
+                                            <span>11</span>
+                                            Apr
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="mocontent">
+                                    <div class="link_loc">
+                                        <h3><a href="events">CODE OF DUTY
+                                                III</a></h3>
+                                        <div>
+                                            <i
+                                                class="fa-solid fa-location-dot"></i>
+                                            <p>Sand diego, Canada</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="event">
+                                <div class="event7_img">
+                                    <a href="evenets"><img src="imgs/thanos.jpg"
+                                            alt></a>
+                                    <div class="circle">
+                                        <span>
+                                            <span>4</span>
+                                            Oct
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="mocontent">
+                                    <div class="link_loc">
+                                        <h3><a href="events">Embedded Infinity
+                                                War</a></h3>
+                                        <div>
+                                            <i
+                                                class="fa-solid fa-location-dot"></i>
+                                            <p>Sand diego, Canada</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="event">
+                                <div class="event8_img">
+                                    <a href="evenets"><img
+                                            src="imgs/robothon.jpg" alt></a>
+                                    <div class="circle">
+                                        <span>
+                                            <span>4</span>
+                                            Oct
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="mocontent">
+                                    <div class="link_loc">
+                                        <h3><a href="events">Step Up
+                                                Robothon</a></h3>
+                                        <div>
+                                            <i
+                                                class="fa-solid fa-location-dot"></i>
+                                            <p>Sand diego, Canada</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="logo">
-                    <img src="imgs/ieee.png" alt="">
-                </div>
-                <div class="links">
-                    <span class="icon">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </span>
-                    <div class="list">
-                        <ul>
-                            <li><a href="#announce">Announcements</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li class="eve"><a href="#events">Events</a></li>
-                            <li><a href="#Team">Team</a></li>
-                        </ul>
+                <!-- <div class="three">
+                    <button type="submit">More Featured Events</button>
+                </div> -->
+            </div>
+            <!--  End Events Section -->
+            <!--  Start Footer Section -->
+            <div class="footer">
+                <div class="content">
+                    <div class="subscirbe">
+                        <div class="text">
+                            <p>Subscribe to our newsletter</p>
+                        </div>
+                        <div class="sec">
+                            <input type="email" placeholder="Your Email">
+                            <button type="submit" class="btn">Subscribe</button>
+                        </div>
                     </div>
-                </div>
-                <span class="line"></span>
-                <div class="social">
-                    <a href class="ico">
-                        <i class="fa-brands fa-facebook-f"></i>
-                    </a>
-                    <a href class="ico">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                    <a href class="ico">
-                        <i class="fa-brands fa-linkedin-in"></i>
-                    </a>
+                    <div class="logo">
+                        <img src="imgs/ieee.png" alt>
+                    </div>
+                    <div class="links">
+                        <span class="icon">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </span>
+                        <div class="list">
+                            <ul>
+                                <li><a href="#announce">Announcements</a></li>
+                                <li><a href="#about">About</a></li>
+                                <li class="eve"><a
+                                        href="#events">Events</a></li>
+                                <li><a href="#Team">Team</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <span class="line"></span>
+                    <div class="social">
+                        <a href class="ico">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href class="ico">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href class="ico">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
