--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                 </div>
             </div>
             <!-- End Intro Section -->
+
         </div>
         <!-- Start Announce Section -->
         <div class="announce" id="announce">
@@ -139,10 +140,13 @@
                             data-aos-once="true" />
                     </div>
                 </div>
+                <hr class="separator">
             </div>
+
         </div>
         <!-- End Announce Section -->
         <!--  Start About Section -->
+
         <div class="container">
             <div class="yasmeen_container1" id="about">
                 <div class="special-heading">
@@ -223,6 +227,122 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+            <hr class="separator">
+        </div>
+        <div class="yasmeen_container2">
+            <!-- <img src="imgs/trend-shape-2.png" class="shapetri" /> -->
+            <img src="imgs/trend-shape-5.png" class="shapelines" />
+            <img src="imgs/trend-shape-3.png" class="shapepyr" />
+            <img src="imgs/trend-shape-4.png" class="shapecross" />
+            <div class="shape1"></div>
+            <div class="yasmeen-section">
+                <div class="yasmeen_title">
+                    <h2 class="ytitle2">Meet our Board.</h2>
+                    <p class="ysubtitle yhide">
+                        Hover On The Picture To See The Name And The Position.
+                    </p>
+                    <p class="ysubtitle ysubtitlemobile">Click On The Picture To
+                        See The Name And The Position.</p>
+                </div>
+                <div class="yasmeen-heads">
+                    <ul class="filterul">
+                        <li class="filter">
+                            <img src="imgs/sallam.jpg" alt class />
+                            <div class="headhide sallam">
+                                <p class="headname">Mohamed Sallam</p>
+                                <p style="color: gray; letter-spacing: 2px">Web
+                                    Head</p>
+                            </div>
+                        </li>
+                        <li class="filter">
+                            <img src="imgs/osama.jpg" class="pshead" alt />
+                            <div class="headhide">
+                                <p class="headname">Osama Ayman</p>
+                                <p
+                                    style="color: gray; letter-spacing: 2px;">Problem-Solving
+                                    Head</p>
+                            </div>
+                        </li>
+                        <li class="filter">
+                            <img src="imgs/sarg.jpg" alt class />
+                            <div class="headhide flutterhead">
+                                <p class="headname">Ahmed Sarg</p>
+                                <p
+                                    style="color: gray; letter-spacing: 2px">Flutter
+                                    Head</p>
+                            </div>
+                        </li>
+                        <li class="filter">
+                            <img src="imgs/mohamed eid.jpg" alt
+                                class="Arduinohead" />
+                            <div class="headhide sallam">
+                                <p class="headname">Mohamed Eid</p>
+                                <p
+                                    style="color: gray; letter-spacing: 2px">Arduino
+                                    Head</p>
+                            </div>
+                        </li>
+                        <li class="filter">
+                            <img src="imgs/adnan.jpg" alt
+                                class="Embeddedhead" />
+                            <div class="headhide sallam">
+                                <p class="headname">Adnan Adel</p>
+                                <p
+                                    style="color: gray; letter-spacing: 2px;">Embedded
+                                    Head</p>
+                            </div>
+                        </li>
+                    </ul>
+
+                    <ul class="filterul">
+                        <li class="filter">
+                            <img src="imgs/renad.jpg" alt class />
+                            <div class="headhide sallam">
+                                <p class="headname">Renad Ahmed</p>
+                                <p style="color: gray; letter-spacing: 2px">PR
+                                    Head</p>
+                            </div>
+                        </li>
+                        <li class="filter">
+                            <img src="imgs/maram.jpg" alt class />
+                            <div class="headhide flutterhead">
+                                <p class="headname">Maram Nasser</p>
+                                <p
+                                    style="color: gray; letter-spacing: 2px">Logistics
+                                    Head</p>
+                            </div>
+                        </li>
+                        <li class="filter">
+                            <img src="imgs/rawan.jpg" alt class="Arduinohead" />
+                            <div class="headhide sallam">
+                                <p class="headname">Rawan Waleed</p>
+                                <p
+                                    style="color: gray; letter-spacing: 2px">Media
+                                    Head</p>
+                            </div>
+                        </li>
+                        <li class="filter">
+                            <img src="imgs/esraa dyaa.jpg" class="pshead" alt />
+                            <div class="headhide">
+                                <p class="headname">Esraa Dyaa</p>
+                                <p style="color: gray; letter-spacing: 2px;">HR
+                                    Head</p>
+                            </div>
+                        </li>
+                        <li class="filter">
+                            <img src="imgs/jana ahmed.jpg" alt
+                                class="Embeddedhead" />
+                            <div class="headhide sallam">
+                                <p class="headname">Jana Ahmed</p>
+                                <p style="color: gray; letter-spacing: 2px;">FR
+                                    Head</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <hr class="separator">
+
             </div>
         </div>
         <!--  End About Section -->
@@ -324,6 +444,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
         <div class="events">
             <div class="container">
