--- a/index.html
+++ b/index.html
@@ -647,6 +647,42 @@
                 </div> -->
             </div>
             <!--  End Events Section -->
+            <!--  Start Sponsers Section -->
+            <div class="sponsers">
+                <div class="container">
+                    <div class="special-heading">
+                        <p>Meet Our</p>
+                        <h2>Sponsers</h2>
+                    </div>
+                    <div class="content">
+                        <div class="sp">
+                            <img src="imgs/creative.png" alt="">
+                        </div>
+                        <div class="sp">
+                            <img src="imgs/ntlogo.png" alt="">
+                        </div>
+                        <div class="sp">
+                            <img src="imgs/technesum.png" alt="">
+                        </div>
+                        <div class="sp">
+                            <img src="imgs/buzzgallery.png" alt="">
+                        </div>
+                        <div class="sp">
+                            <img src="imgs/Isis.png" alt="">
+                        </div>
+                        <div class="sp">
+                            <img src="imgs/IEEE-Day.png" alt="">
+                        </div>
+                        <div class="sp" id="blanco">
+                            <img src="imgs/blanco.png" alt="">
+                        </div>
+                        <div class="sp">
+                            <img src="imgs/Fati's.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--  End Sponsers Section -->
             <!--  Start Footer Section -->
             <div class="footer">
                 <div class="content">
