--- a/index.html
+++ b/index.html
@@ -357,49 +357,49 @@
 
                     <div class="slide active">
                         <img
-                            src="../imgs/back.jpg"
+                            src="./imgs/back.jpg"
                             alt
                             srcset />
                     </div>
                     <div class="slide">
                         <img
-                            src="../imgs/428699812_817232470430822_3672796228702654987_n.png"
+                            src="./imgs/428699812_817232470430822_3672796228702654987_n.png"
                             alt
                             srcset />
                     </div>
                     <div class="slide">
                         <img
-                            src="../imgs/430858252_819899103497492_753438531780433772_n.png"
+                            src="./imgs/430858252_819899103497492_753438531780433772_n.png"
                             alt
                             srcset />
                     </div>
                     <div class="slide">
                         <img
-                            src="../imgs/430866151_819899663497436_3855873767756725001_n.png"
+                            src="./imgs/430866151_819899663497436_3855873767756725001_n.png"
                             alt
                             srcset />
                     </div>
                     <div class="slide">
                         <img
-                            src="../imgs/430870673_819898770164192_6054743429955625108_n.png"
+                            src="./imgs/430870673_819898770164192_6054743429955625108_n.png"
                             alt
                             srcset />
                     </div>
                     <div class="slide">
                         <img
-                            src="../imgs/430896664_818373966983339_8506501736667685736_n.png"
+                            src="./imgs/430896664_818373966983339_8506501736667685736_n.png"
                             alt
                             srcset />
                     </div>
                     <div class="slide">
                         <img
-                            src="../imgs/431312294_819899350164134_2190193390468296135_n.png"
+                            src="./imgs/431312294_819899350164134_2190193390468296135_n.png"
                             alt
                             srcset />
                     </div>
                     <div class="slide prev">
                         <img
-                            src="../imgs/430905592_819898523497550_2249855588110603515_n.png"
+                            src="./imgs/430905592_819898523497550_2249855588110603515_n.png"
                             alt
                             srcset />
                     </div>
