--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             data-aos="fade-up"
                             data-aos-duration="1000"
                             data-aos-once="true">
-                            <h2>Hi, Friend</h2>
+                            <h2>Hi, Friend!</h2>
                             <p>
                                 Come and see how our journey is going, maybe
                                 you'll be a part of
