--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                                 <li><a
                                         href="#announce">Announcements</a></li>
                                 <li><a href="#about">About</a></li>
+                                <li><a href="#team">Team</a></li>
                                 <li class="eve">
                                     <a href="#events">Events</a>
                                     <ul>
@@ -53,7 +54,6 @@
                                         <li><a href="#">Mind Game</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#Team">Team</a></li>
                                 <div class="but">
                                     <a href="#contact"><button
                                             class="bt1">Contact Us</button></a>
@@ -279,7 +279,7 @@
                 </div>
                 <hr class="separator">
             </div>
-            <div class="yasmeen_container2">
+            <div class="yasmeen_container2" id="team">
                 <!-- <img src="imgs/trend-shape-2.png" class="shapetri" /> -->
                 <img src="imgs/trend-shape-5.png" class="shapelines" />
                 <img src="imgs/trend-shape-3.png" class="shapepyr" />
@@ -502,8 +502,162 @@
                     </div>
                 </div>
             </div>
-
         </div>
+            <!-- Start speakers -->
+    <div class="speakers">
+        <div class="container">
+            <div class="special-heading">
+                <h2>Speakers</h2>
+            </div>
+            <div class="content">
+                <div class="card">
+                    <div class="time">
+                        <p>9:30 To 10:30 AM</p>
+                    </div>
+                    <div class="social">
+                        <a href class="ico">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href class="ico">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href class="ico">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                    </div>
+                    <div class="image">
+                        <div class="layer"></div>
+                        <img src="imgs/428699812_817232470430822_3672796228702654987_n.png" alt="">
+                    </div>
+                    <div class="text" >
+                        <h2>Osama Elzero</h2>
+                        <p>Expert at Web Development</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="time">
+                        <p>11:00 To 11:30 AM</p>
+                    </div>
+                    <div class="social">
+                        <a href class="ico">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href class="ico">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href class="ico">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                    </div>
+                    <div class="image">
+                        <div class="layer"></div>
+                        <img src="imgs/430858252_819899103497492_753438531780433772_n.png" alt="">
+                    </div>
+                    <div class="text">
+                    <h2>Mohamed Tharwat</h3>
+                    <p>Expert at AI And ML</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="time">
+                        <p>12:00 To 12:30 PM</p>
+                    </div>
+                    <div class="social">
+                        <a href class="ico">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href class="ico">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href class="ico">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                    </div>
+                    <div class="image">
+                        <div class="layer"></div>
+                        <img src="imgs/430866151_819899663497436_3855873767756725001_n.png" alt="">
+                    </div>
+                    <div class="text">
+                        <h2>Ahmed Abd ElHafez</h2>
+                        <p>Expert at Cyper Security</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="time">
+                        <p>12:30 To 1:00 AM</p>
+                    </div>
+                    <div class="social">
+                        <a href class="ico">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href class="ico">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href class="ico">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                    </div>
+                    <div class="image">
+                        <div class="layer"></div>
+                        <img src="imgs/430870673_819898770164192_6054743429955625108_n.png" alt="">
+                    </div>
+                    <div class="text">
+                        <h2>Amr Al Awamry</h2>
+                        <p>Expert at Enterepreneurship</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="time">
+                        <p>1:00 To 1:30 PM</p>
+                    </div>
+                    <div class="social">
+                        <a href class="ico">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href class="ico">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href class="ico">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                    </div>
+                    <div class="image">
+                        <div class="layer"></div>
+                        <img src="imgs/430905592_819898523497550_2249855588110603515_n.png" alt="">
+                    </div>
+                    <div class="text">
+                        <h2>Mahmoud Hamdy</h2>
+                        <p>Expert at Cv Writing</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="time">
+                        <p>2:00 To 2:30 PM</p>
+                    </div>
+                    <div class="social">
+                        <a href class="ico">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a href class="ico">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href class="ico">
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </a>
+                    </div>
+                    <div class="image">
+                        <div class="layer"></div>
+                        <img src="imgs/431312294_819899350164134_2190193390468296135_n.png" alt="">
+                    </div>
+                    <div class="text" data-aos-duration="1000" >
+                        <h2>Mohamed Adel</h2>
+                        <p>Expert at Data Center</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End speakers -->
         <div class="events">
             <div class="container">
                 <div class="moataz_container">
@@ -618,7 +772,7 @@
                                 <div class="mocontent">
                                     <div class="link_loc">
                                         <h3><a href="events">Portal
-                                                "out of time"</a></h3>
+                                                "Out Of Time"</a></h3>
                                         <div>
                                             <i
                                                 class="fa-solid fa-location-dot"></i>
